Issues 1.Timer issue:once next button is clicked timer will invisible.//Done 2.on mobile view we cant see question overview instructions.//Done
Features
1.Maintain the question status
1.1 if user click next the quetion overview will fill with color Red with status Not Attempted.
1.2 if user selects the answer and click next then quetion number will filled with green color(attempted).
1.3 if user click on review for latter button without solving answer then filled with purple color(Tobe reviewed).
1.4 By default which questions we are not visited it will be gray(not  viewed yet).
1.5 if user click on review for latter button with solving answer then filled with purple with tick color(Attempted and marked for review)
2. Clear Selction should clear the student selcted answer//Done

Code Review
1.In our aspx we written style related code. just remove that and create saperate css file.//Done
2.Rename/give proper names to css & js files//Done
3. Saving the answer in DB should happen on Save/Next/Prev button click. Remove the old implementation.

--- a/Exam/ExamStyle.css
+++ b/Exam/ExamStyle.css
@@ -909,7 +909,6 @@ sup {
     display: block !important;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
-    -khtml-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
@@ -919,7 +918,6 @@ sup {
     transition: none;
     -webkit-transition: none;
     -moz-transition: none;
-    -ms-transition: none;
     -o-transition: none;
 }
 
@@ -1341,7 +1339,6 @@ test-sections {
 
 .test-sections__subject-label {
     font-size: 13px;
-    min-width: auto;
 }
 
 .test-sections__subject:hover .test-sections__subject-label, .test-sections__subject.test-sections__subject--active .test-sections__subject-label {
@@ -1524,6 +1521,7 @@ img.test-grid__logo.logo_responsive {
     border-radius: 20px;
     border: none;
     margin-top:-50px;
+
 }
 
 .topnav {
